start/stop clippy added

--- a/src/app/system-apps/login/login.component.css
+++ b/src/app/system-apps/login/login.component.css
@@ -104,6 +104,8 @@
 }
 
 .lockscreen-date-placeholder {
+    position: relative;
+    left: 15px;
     font-size: 45px;
     font-weight:300;
     color: #fff;
